Fix overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -157,7 +157,7 @@ body {
 .overflow {
   height: 100%;
   max-height: 80dvh;
-  overflow-x: scroll;
+  overflow-y: auto;
 }
 
 .text-left-align {
